<resources>
    <string name="app_name">NotesToDoApp</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="notes">Notes</string>
    <string name="to_do">To Do</string>
    <string name="completed">Completed</string>
    <string name="addNote">+</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_note">New Note</string>
    <string name="note_title">Note title</string>
    <string name="write_note">Write note...</string>
    <string name="save">Save</string>
    <string name="new_to_do">New to do</string>
    <string name="add_to_do">Add to do...</string>
    <string name="item_note_title">Note Title</string>
    <string name="note_item_content">Write your note here...</string>
    <string name="Date">Date</string>
    <string name="enter_your_task">Enter your task</string>
    <string name="sample_task">Sample Task</string>
</resources>