<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="12dp"
    android:background="?android:selectableItemBackground">

    <TextView
        android:id="@+id/tvNoteTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/item_note_title"
        android:textStyle="bold"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/tvNoteContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/note_item_content"
        android:textSize="16sp"
        android:paddingTop="4dp"/>

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Date"
        android:textSize="14sp"
        android:textColor="@android:color/darker_gray"
        android:paddingTop="4dp"/>

</LinearLayout>